<resources>
    <string name="app_name">Prototype bp4</string>
    <string name="textview_welkom">Hallo nieuwe gebruiken, Voordat je kan beginnen met de app gebruiken moeten wij eerst een naam hebben om jou te noemen.</string>
    <string name="textview_name">Vul hier je gebruikersnaam in.</string>
    <string name="edittext_name">Gebruikersnaam</string>
    <string name="textview_weight">Vul hier je gewicht in.</string>
    <string name="edittext_weight">Gewicht</string>
    <string name="textview_argument">Vul hier in waarom jij deze app gedownload hebt.*</string>
    <string name="edittext_argument">Argument</string>
    <string name="textview_note">* Hoeft niet ingevult worden.</string>
    <string name="textview_start">Start een spel</string>
    <string name="textview_history">Score geschiedenis</string>
    <string name="textview_account">Persoonlijk account</string>
    <string name="textview_chosegamemode">Wilt u alleen of met anderen spelen?</string>
    <string name="textview_chooselevel">choose level you have finish on</string>
    <string name="textview_Score">Score</string>
    <string name="textview_End">Druk hier als je klaar bent</string>
    <string name="textview_Finish">Finish</string>

    <string name="textview_statuitleg">Druk hier als je wilt beginnen</string>
    <string name="textview_startbtn">Start</string>
    <string name="Resultaat">Resultaat</string>
    <string name="Geslacht">Geslacht</string>


    <string-array name="levels">
        <item>level 1</item>
        <item>level 2</item>
        <item>level 3</item>
        <item>level 4</item>
        <item>level 5</item>
        <item>level 6</item>
        <item>level 7</item>
        <item>level 8</item>
        <item>level 9</item>
        <item>level 10</item>
        <item>level 11</item>
        <item>level 12</item>
        <item>level 13</item>
        <item>level 14</item>
        <item>level 15</item>
        <item>level 16</item>
        <item>level 17</item>
        <item>level 18</item>
        <item>level 19</item>
        <item>level 20</item>
    </string-array>

</resources>