<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_welkom"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="5"
        android:textColor="@color/white"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

<!--    <TextView-->
<!--        android:id="@+id/textView9"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/textview_name"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--        android:textColor="@color/white"-->
<!--        />-->

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/textview_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:background="@color/white"
        android:shape="ring"
        />

<!--    <TextView-->
<!--        android:id="@+id/textView10"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/textview_weight"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/white"-->
<!--        />-->

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/textview_weight"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/white"
        />

<!--    <TextView-->
<!--        android:id="@+id/textView11"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/textview_argument"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/white"-->
<!--        />-->

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/textview_argument"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/white"
        android:maxLines="4"
        android:lines="4"
        />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>